--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,9 @@
                 <span class="text-primary">AMRI</span>
             </h1>
             <div class="subheading mb-5">36 avenue de fouilleuse · Rueil malmaison, 92500 · Ile de France ·
-                <a href="mailto:amrihafedh@yahoo.fr">amrihafedh@yahoo.fr</a>
+                <br/>
+                <i class="fa fa-envelope-o"></i> <a href="mailto:amrihafedh@yahoo.fr">amrihafedh@yahoo.fr</a><br/>
+                <i class="fa fa-mobile-phone"> </i> +33 (0)6 51 34 32 15
             </div>
             <p class="mb-5">
                 I am PHP developer - symfony Fullstack. I develop responsive web platforms for companies.
@@ -60,7 +62,19 @@
                     </a>
                 </li>
             </ul>
+            <br/>
+                <br/>
+                <h2>Languages </h2>
+                <ul>
+                    <li>
+                        English : Intermediary<br/>
+                    </li>
+                    <li>
+                        French : Native<br/>
+                    </li>
+                </ul>
         </div>
+        
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
