--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,11 +37,11 @@
             </h1>
             <div class="subheading mb-5">36 avenue de fouilleuse · Rueil malmaison, 92500 · Ile de France ·
                 <br/>
-                <i class="fa fa-envelope-o"></i> <a href="mailto:amrihafedh@yahoo.fr">amrihafedh@yahoo.fr</a><br/>
-                <i class="fa fa-mobile-phone"> </i> +33 (0)6 51 34 32 15
+                <i class="fa fa-envelope-o"></i> &nbsp;<a href="mailto:amrihafedh@yahoo.fr">amrihafedh@yahoo.fr</a><br/>
+                <i class="fa fa-mobile-phone"> </i>&nbsp; +33 (0)6 51 34 32 15
             </div>
             <p class="mb-5">
-                I am PHP developer - symfony Fullstack. I develop responsive web platforms for companies.
+                I am webdeveloper - Php/Symfony Fullstack. I develop web platforms for companies.
                 With 4 years of experience, today I work for small and large companies on their website
             </p>
             <ul class="list-inline list-social-icons mb-0">
@@ -83,7 +83,7 @@
 
             <div class="resume-item d-flex flex-column flex-md-row mb-5">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Senior Web Developer</h3>
+                    <h3 class="mb-0">Web Developer</h3>
                     <div class="subheading mb-3">Publicis Sapient</div>
                     <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                 </div>
@@ -116,7 +116,7 @@
 
             <div class="resume-item d-flex flex-column flex-md-row">
                 <div class="resume-content mr-auto">
-                    <h3 class="mb-0">Web developer Intern-ship</h3>
+                    <h3 class="mb-0">Web developer internship</h3>
                     <div class="subheading mb-3">cerialis</div>
                     <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                 </div>
@@ -148,7 +148,7 @@
                 <div class="resume-content mr-auto">
                     <h3 class="mb-0">University Paris 8</h3>
                     <div class="subheading mb-3">bachelor degree</div>
-                    <div>Computer Science - Informatic technologies</div>
+                    <div>Computer Science - computer technology</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">September 2011 - September 2012</span>
@@ -220,7 +220,7 @@
             <ul class="fa-ul mb-0">
                 <li>
                     <i class="fa-li fa fa-check"></i>
-                    Java, bash</li>
+                    PHP, Java, Bash</li>
                 <li>
                     <i class="fa-li fa fa-check"></i>
                     Swagger, SoapUI, Postman, Selenium, PhpUnit, Sonar, jMeter</li>
