--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,8 +40,10 @@
                 <i class="fa fa-mobile-phone"> </i>&nbsp; +33 (0)6 51 34 32 15
             </div>
             <p class="mb-5">
-                I am webdeveloper - Php/Symfony Fullstack. I develop web platforms for companies.
-                With 4 years of experience, today I work for small and large companies on their website
+                I have a passion for everything that has to do with informatics in general, and I am particularly curious about new technologies and how they can be used to improve softwares. 
+                I truly enjoy working in this field in which one can create anything (s)he wants or find solutions that can improve everyday lives.
+                I traveled a lot with my family for holidays and lived in two near but different countries, 
+                and this had me being an open-minded person that loves to meet new people and understand the different approach they might have on certain subjects.
             </p>
             <ul class="list-inline list-social-icons mb-0">
                 <li class="list-inline-item">
